--- a/Googleweb.html
+++ b/Googleweb.html
@@ -9,12 +9,15 @@
 </head>
 
 <body>
+<div class="googlesearch">
+    <input type="text" id="width" name="width" size="200" value="Search Google or type a URL"><br><br>
+</div>
 <div class="google">
 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
 </div>
 <div class="textsearch">
 <label for="textsearch"> </label><br>
-<input type="text" id="textsearch" name="textsearch" value="Google Search"><br>
+<input type="text" id="textsearch" name="textsearch" size="50" value="Search Google or type a URL"><br>
 <input type="submit" value="Search">
 </div>
 </body>
